--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 2 Semana Santa</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
         <header>
-        <h1></h1>
+        <h1>Noticia De Ultima Hora</h1>
         <article></article>
         </header> 
         <navbar>
