agregando article italic

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
                 <li a href="#">Blog</li>
             </ul>
         </navbar>
-        <article></article>
+        <br>
+        <article>
+          <h3> Donald Trump, horas después de ser imputado por 34 delitos:<br> «Nuestro país se está yendo al infierno»</h3>
+          <p> «Nunca pensé que una cosa como esta pudiera pasar en Estados Unidos. El único delito que he cometido ha sido defender a nuestro nación de aquellos que buscan destruirla», así comenzó Donald Trump, expresidente de esa nación, su discurso horas después de haber sido imputado formalmente en Nueva York por 34 delitos «clase E», la más baja, que conllevarían una condena de hasta 4 años de prisión.
+
+            <br>«Nuestro país se está yendo al infierno», añadió desde su residencia en Florida a las 8.27 de la tarde (2.27 am, hora española).
+
+            <br>«(El caso) debería ser abandonado inmediatamente. Todo el mundo, mis abogados, todo el mundo, dice ‘aquí no hay nada’, ¡no hay caso!», reiteró.</p>
+        </article>
+        </article>
     
         
         <footer>
