agregando un simple footer

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
 
             <br>«(El caso) debería ser abandonado inmediatamente. Todo el mundo, mis abogados, todo el mundo, dice ‘aquí no hay nada’, ¡no hay caso!», reiteró.</p>
         </article>
-        </article>
+
     
         
         <footer>
-            <p>Politica de Privacidad</p>
-            <p>Contacto</p>
+            <span>By me, Irina</span>
         </footer>
     </div>
 </body>
