--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea 2 Semana Santa</title>
+    <title>Práctica de Desarrollo Web: Creación de una Página con Noticia de Última Hora</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
     
-        <h1>Noticia De Última Hora</h1>
+        <h1>Práctica de Desarrollo Web: Creación de una Página con Noticia de Última Hora</h1>
         <navbar class="menu">
             <ul>
                 <li a href="#">Home</li>
